--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,32 @@
 .App {
-  text-align: center;
-  background-color: #d8ebf0;
+    text-align: center;
+    margin-top: 50px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input {
+    padding: 10px;
+    margin-right: 10px;
+    width: 200px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button {
+    padding: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.weather-cards {
+    margin-top: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.weather-card {
+    border: 1px solid #ccc;
+    padding: 20px;
+    display: inline-block;
+    margin: 10px;
+    width: 200px;
+    background-color: #f9f9f9;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+p {
+    margin: 5px 0;
 }
